# tg_messenger

./: .env.example  .gitignore  CLAUDE.md  GHOSTWRITE_DESIGN.md  PLAN.md  README.md  agent.json.example  moderation.json.example  pyproject.toml
.github/workflows/: ci.yml
scripts/e2e/: 01_readonly.sh  02_mutations_saved.sh  02_saved_messages.sh  03_dangerous_parity.sh  03_manual.sh  03_optional_safe.sh  04_guided_events.sh  99_dangerous_parity.sh  PARITY.md  README.md  lib.sh  run_safe.sh
src/tg_messenger/: __init__.py
src/tg_messenger/agent/: __init__.py  config.py  factory.py  ghostwrite.py  media.py  orchestrator.py  outbound.py  outbound_coordinator.py  runner.py  search.py  suggest.py  tools.py  translate.py
src/tg_messenger/cli/: __init__.py  main.py  parsers.py
src/tg_messenger/cli/commands/: agent.py  auth.py  config.py  ghostwrite.py  heartbeat.py  message.py  serve.py  username.py  watch.py  worker.py
src/tg_messenger/core/: __init__.py  auth.py  cache.py  client.py  dotenv.py  events.py  flood.py  heartbeat.py  languages.py  logsetup.py  message_store.py  models.py  moderation.py  names.py  paths.py  ratelimit.py  search.py  session_cipher.py  storage.py  usernames.py  watch.py
src/tg_messenger/interop/: __init__.py  factory_client.py  worker.py
src/tg_messenger/tui/: __init__.py  app.py  bubbles.py  format.py  parsing.py  screens.py  settings.py  widgets.py
src/tg_messenger/web/: __init__.py  app.py  cookies.py  render.py  state.py
src/tg_messenger/web/templates/: chat.html  login.html  tg_login.html
tests/: conftest.py  test_agent_cli.py  test_agent_config.py  test_agent_media.py  test_agent_orchestrator.py  test_agent_runner.py  test_agent_search.py  test_agent_tools.py  test_auth.py  test_cache.py  test_cli.py  test_client.py  test_config_creds.py  test_e2e.py  test_events.py  test_factory_translate.py  test_flood.py  test_ghostwrite.py  test_heartbeat.py  test_import.py  test_interop.py  test_languages.py  test_logsetup.py  test_media.py  test_message_store.py  test_models.py  test_moderation.py  test_outbound.py  test_outbound_coordinator.py  test_packaging.py  test_paths.py  test_ratelimit.py  test_readonly_guard.py  test_search.py  test_session_cipher.py  test_storage.py  test_stream_consumers.py  test_suggest.py  test_suggest_cli.py  test_translate.py  (+7 more)
tests/js/: chat_handlers_test.mjs
