[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tg-messenger"
version = "0.1.0"
description = "Standalone reusable Telegram messenger client (Web / TUI / CLI) over Telethon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
    "pydantic>=2",
    "pydantic-settings>=2",
    "click>=8.1",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "jinja2>=3.1", "python-multipart>=0.0.9"]
tui = ["textual>=0.60"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-timeout>=2.3", "ruff>=0.6", "httpx>=0.27"]

[project.scripts]
tg-messenger = "tg_messenger.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_messenger"]
include = ["src/tg_messenger/web/templates/*.html"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
pythonpath = ["src"]
filterwarnings = ["error"]
