[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tg-messenger"
version = "0.1.0"
description = "Standalone reusable Telegram messenger client (Web / TUI / CLI) over Telethon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
    "pydantic>=2",
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "textual>=0.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    # 1.3.0 leaks event loops -> ResourceWarning fails the suite (filterwarnings=error)
    "pytest-asyncio>=1.4",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "httpx>=0.27",
]

[project.scripts]
tg-messenger = "tg_messenger.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_messenger"]
include = ["src/tg_messenger/web/templates/*.html"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
pythonpath = ["src", "."]
filterwarnings = ["error"]
