[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tg-messenger"
version = "0.1.0"
description = "Standalone reusable Telegram messenger client (Web / TUI / CLI) over Telethon"
readme = "README.md"
requires-python = ">=3.11"
# base = core + CLI only: `pip install tg-messenger` для импорта StandaloneTelegramClient
# не тащит web/tui-стек. telethon>=1.43 — паритет с tg_content_factory (см. #9).
dependencies = [
    "telethon>=1.43",
    "pydantic>=2",
    "click>=8.1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
tui = [
    "textual>=0.60",
]
crypto = [
    # at-rest session encryption (Fernet) — SSO-compatible with tg_content_factory
    "cryptography>=42",
]
agent = [
    "langchain>=1.0",   # init_chat_model — единый интерфейс моделей
    "langgraph>=1.0",   # StateGraph + checkpointer
    "deepagents>=0.2",  # create_deep_agent — исполнитель заданий
    "ddgs>=9.0",        # дефолтный веб-поиск без API-ключа
    "httpx>=0.27",      # brave search REST
]
all = [
    "tg-messenger[web,tui,crypto,agent]",
]
dev = [
    # тесты web/tui/crypto должны бежать локально → dev тянет эти extras
    "tg-messenger[web,tui,crypto]",
    "pytest>=8",
    # 1.3.0 leaks event loops -> ResourceWarning fails the suite (filterwarnings=error)
    "pytest-asyncio>=1.4",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "httpx>=0.27",
]

[project.scripts]
tg-messenger = "tg_messenger.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_messenger"]
include = [
    "src/tg_messenger/web/templates/*.html",
    "src/tg_messenger/py.typed",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
pythonpath = ["src", "."]
filterwarnings = ["error"]
